docs/versions/4.22/groups/H3.md
---
layout: group
group_id: H3
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

This remediation configures the SSH daemon to explicitly deny authentication with empty passwords. This is a HIGH severity compliance requirement.

## Settings

| Setting | Value | Description |
|---------|-------|-------------|
| `PermitEmptyPasswords` | `no` | Prevent SSH login with empty passwords |

## Implementation

The remediation applies a MachineConfig with SSHD hardening:

```yaml
apiVersion: machineconfiguration.openshift.io/v1
kind: MachineConfig
metadata:
  name: 75-sshd-hardening
  labels:
    machineconfiguration.openshift.io/role: master
spec:
  config:
    ignition:
      version: 3.2.0
    storage:
      files:
        - path: /etc/ssh/sshd_config.d/75-hardening.conf
          mode: 0600
          overwrite: true
          contents:
            inline: |
              # HIGH severity - Disable empty passwords
              PermitEmptyPasswords no
```

## Compliance Checks Remediated

This group addresses the following compliance checks:

| Check | Profile | Description | Docs |
|-------|---------|-------------|------|
| `rhcos4-e8-worker-sshd-disable-empty-passwords` | E8 | Disable SSH empty passwords (worker) | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_disable_empty_passwords) |
| `rhcos4-e8-master-sshd-disable-empty-passwords` | E8 | Disable SSH empty passwords (master) | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_disable_empty_passwords) |

<div class="source-files">
<h4>Source Remediation Files</h4>
<ul>
<li>high/rhcos4-e8-worker-sshd-disable-empty-passwords.yaml</li>
<li>high/rhcos4-e8-master-sshd-disable-empty-passwords.yaml</li>
</ul>
</div>

## Verification

After applying the MachineConfig, verify SSHD configuration:

```bash
oc debug node/<node-name> -- chroot /host sshd -T | grep permitemptypasswords
# Expected output: permitemptypasswords no
```

## Security Impact

Disabling empty passwords ensures that:
- All SSH connections require proper password or key authentication
- Accounts without passwords cannot be accessed remotely
- Compliance with Essential Eight and CIS benchmarks

## Related SSHD Groups

Other SSHD hardening groups (to be addressed separately):
- [M1: SSHD Configuration](M1.html) - MEDIUM severity SSHD settings
- [L1: SSHD LogLevel](L1.html) - LOW severity SSHD setting
